# homework-cpp-ext

./: .gitignore  homework-cpp-ext.sln
homework-cpp-ext/: homework-cpp-ext.cpp  homework-cpp-ext.vcxproj  homework-cpp-ext.vcxproj.filters
homework-cpp-ext/Debug/: homework-cpp-ext.exe.recipe  homework-cpp-ext.ilk  vc142.idb
hw1-helper-classes/: hw1-helper-classes.cpp  hw1-helper-classes.vcxproj  hw1-helper-classes.vcxproj.filters
hw1-helper-classes/Debug/: hw1-helper-classes.exe.recipe  hw1-helper-classes.ilk  hw1-helper-classes.obj.enc  vc142.idb
hw2-memory-runtime/: Timer.h  hw2-memory-runtime.cpp  hw2-memory-runtime.vcxproj  hw2-memory-runtime.vcxproj.filters
hw2-memory-runtime/Debug/: hw2-memory-runtime.exe.recipe  hw2-memory-runtime.ilk  vc142.idb
hw3-sequence-containers/: hw3-sequence-containers.cpp  hw3-sequence-containers.vcxproj  hw3-sequence-containers.vcxproj.filters
hw4-algorithms/: .gitignore  hw4-algorithms.cpp  hw4-algorithms.vcxproj  hw4-algorithms.vcxproj.filters
hw5-containers/: hw5-containers.cpp  hw5-containers.vcxproj  hw5-containers.vcxproj.filters
hw6-concurrency/: hw6-concurrency.cpp  hw6-concurrency.vcxproj  hw6-concurrency.vcxproj.filters
hw7-serialization/: .gitignore  CMakeLists.txt  StudentsGroup.cpp  StudentsGroup.h  hw7-serialization.cpp  hw7-serialization.vcxproj  hw7-serialization.vcxproj.filters  interfaces.h  persons.pb.cc
hw8-tests/: CMakeLists.txt  conanfile.txt  hw7-serialization.cpp  hw8-serialization_test.cpp  persons.pb.h  persons.proto
lesson-memory-runtime/: lesson-memory-runtime.cpp  lesson-memory-runtime.vcxproj  lesson-memory-runtime.vcxproj.filters
lesson-memory-runtime/Debug/: CodeAnalysisResultManifest.txt  lesson-memory-runtime.exe.recipe  vc142.idb  (+3 more)
lesson8-gtest/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  lesson8-gtest.cpp
lesson8-gtest/libs/: minmax.cpp  minmax.h
(+35 files in other folders)
